WebVideoFullscreenManagerProxy must clear pointers when invalidated https://bugs.webkit.org/show_bug.cgi?id=138982

Reviewed by Jer Noble.

* UIProcess/ios/WebVideoFullscreenManagerProxy.mm:
(WebKit::WebVideoFullscreenManagerProxy::~WebVideoFullscreenManagerProxy): Call invalidate.
(WebKit::WebVideoFullscreenManagerProxy::invalidate): Set WebVideoFullscreenModel and
    WebVideoFullscreenChangeObserver to NULL.


Canonical link: https://commits.webkit.org/156867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176487 268f45cc-cd09-0410-ab3c-d52691b4dbfc